@@ -3,6 +3,7 @@
 {
     "wingman" : {
 	"max_workers" : 2,
+        "pid_file_path" : "/var/run/wingman.pid",
         "beanstalkd" : {
 	   "server" : "127.0.0.1",
            "ttr" : 60,
